# typeql-lang-python

./: .flake8  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml
python/common/: typeql_arg.py  typeql_token.py
python/common/exception/: typeql_exception.py
python/pattern/: conjuctable.py  definable.py  negation.py  pattern.py
python/pattern/constraint/: concept_constraint.py  constraint.py  thing_constraint.py  type_constraint.py
python/pattern/schema/: rule.py
python/pattern/variable/: bound_variable.py  concept_variable.py  reference.py  unbound_variable.py  variable.py
python/query/: typeql_compute.py  typeql_definable.py  typeql_define.py  typeql_delete.py  typeql_insert.py  typeql_match.py  typeql_query.py  typeql_undefine.py  typeql_update.py  typeql_wirtable.py  typeql_writable.py
python/query/builder/: aggregatable.py  computable.py  sortable.py
typeql/common/: typeql_arg.py  typeql_token.py
typeql/common/exception/: typeql_exception.py
typeql/pattern/: conjuctable.py  conjunction.py  definable.py  disjunction.py  negation.py  pattern.py
typeql/pattern/constraint/: concept_constraint.py  constraint.py  thing_constraint.py
typeql/pattern/schema/: rule.py
typeql/pattern/variable/: bound_variable.py  concept_variable.py  reference.py  type_variable.py  unbound_variable.py  variable.py
typeql/types/: variable.py
typeql/types/pattern/: concept_variable_builder.py  constraint.py  definable.py  pattern.py  reference.py  thing_constraint.py  thing_variable_builder.py  type_constraint.py  type_variable_builder.py
(+10 files in other folders)
