[tool.poetry]
name = "typeql-lang-python"
version = "0.0.1"
description = "TypeQL language library for python"
authors = ["Lightoyou <vincent.rome@protonmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [
    	    { include = "typeql" }
           ]

[[tool.poetry.source]]
name = "vaticle-pypi-snapshot"
url = "https://repo.vaticle.com/repository/pypi-snapshot/simple"

[tool.poetry.dependencies]
python = "^3.6"
#typeql-grammar = "0.0.0-82e293af61b06b5364949afae50f453794a9fea7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
paths = ["python"]
sort_by_size = true
verbose = true

[tool.isort]
profile = "black"
